melhorando dtos